fixing IDE warnings